[project]
name = "streamlit-ui-for-autogen-0-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.11",
    "autogen-agentchat>=0.6.1",
    "autogen-ext[azure,openai]>=0.6.1",
    "dotenv>=0.9.9",
    "streamlit>=1.45.1",
]
